[package]
name = "pals"
version = "0.1.0"
edition = "2018"
authors = ["oooutlk <oooutlk@outlook.com>"]
license = "MIT/Apache-2.0"
keywords = [ "process", "argument", "argv", "split", "json" ]
readme = "README.md"
repository = "https://github.com/oooutlk/pals"
documentation = "https://docs.rs/pals"
categories = [ "command-line-utilities" ]
description = "Processes' Arguments LiSt"

[dependencies]
anyhow = "1.0"
escape8259 = "0.5"
trees = "0.4"

[target.'cfg(target_os="freebsd")'.dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}

[target.'cfg(unix)'.dependencies]
cmdline_words_parser = "0.2"

[target.'cfg(windows)'.dependencies]
utf16_reader = "0.1"
